# PFAC-CUDA

./: .gitmodules  CMakeLists.txt  README.md  main.cu
headers/: managed_allocator.hpp  trie.hpp  util.cuh  util.tcc
src/: util.cu
validation/: ahocorasick.ipynb  results.csv
